runnables/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: student-app-frontend-deploy
    #namespace: student-app
spec:
    selector:
        matchLabels:
            app: frontend
    replicas: 1
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend
                  image: benvit/student-app-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 80
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "500m"
