runnables/deployment-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: student-app-mongo-deploy
    #namespace: student-app
spec:
    selector:
        matchLabels:
            app: student-app-mongo-deploy
    replicas: 1
    template:
        metadata:
            labels:
                app: student-app-mongo-deploy
        spec:
            containers:
                - name: mongo
                  image: mongo
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 27017
                  resources:
                      limits:
                          memory: "128Mi"
                          cpu: "500m"
