runnables/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: student-app-backend-svc
    #namespace: student-app
spec:
    selector:
        app: backend
    ports:
        - protocol: "TCP"
          port: 8080
          targetPort: 8080
