runnables/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: student-app-frontend-svc
    #namespace: student-app
spec:
    selector:
        app: frontend
    ports:
        - protocol: "TCP"
          port: 80
          targetPort: 80
