runnables/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
    name: student-app-mongo-svc
    #namespace: student-app
spec:
    selector:
        app: student-app-mongo-deploy
    ports:
        - protocol: "TCP"
          port: 27017
          targetPort: 27017
